Сделал анимацию на портфолио . Попытался сделать current

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,15 +21,17 @@
           >
           <ul class="navigation-menu list">
             <li class="navigation-menu-item">
-              <a class="navigation-menu-link link" href="">Студия</a>
+              <a class="navigation-menu-link link current" href="index.html"
+                >Студия</a
+              >
             </li>
             <li class="navigation-menu-item">
-              <a class="navigation-menu-link link" href="portfolio.html"
+              <a class="navigation-menu-link link current" href="portfolio.html"
                 >Портфолио</a
               >
             </li>
             <li class="navigation-menu-item">
-              <a class="navigation-menu-link link" href="">Контакты</a>
+              <a class="navigation-menu-link link current" href="">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -92,13 +94,15 @@
                 src="./Images/Portfolio/portfolio1.jpg"
                 alt=""
               />
-              <h2 class="projects-title">Технокряк</h2>
-              <!-- <p class="projects-description">
+              <p class="projects-description">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
-              </p> -->
-              <h3 class="projects-type">Веб-сайт</h3>
+              </p>
+              <div class="projects-title-box">
+                <h2 class="projects-title">Технокряк</h2>
+                <h3 class="projects-type">Веб-сайт</h3>
+              </div>
             </li>
             <li class="projects-list-item">
               <img
@@ -106,8 +110,13 @@
                 src="./Images/Portfolio/portfolio2.jpg"
                 alt=""
               />
+              <p class="projects-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+                est suscipit quaerat amet debitis? Sit velit quis natus
+                necessitatibus, eos quas eaque quia exercitationem ex maiores
+                excepturi voluptatem possimus inventore.
+              </p>
               <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-              <p class="projects-description"></p>
               <h3 class="projects-type">Дизайн</h3>
             </li>
             <li class="projects-list-item">
@@ -116,8 +125,13 @@
                 src="./Images/Portfolio/portfolio3.jpg"
                 alt=""
               />
+              <p class="projects-description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. A
+                porro cumque laborum eveniet temporibus maiores laboriosam
+                possimus quasi necessitatibus impedit ab earum unde id commodi
+                veniam, repellendus officia assumenda neque!
+              </p>
               <h2 class="projects-title">Ресторан Seafood</h2>
-              <p class="projects-description"></p>
               <h3 class="projects-type">Приложение</h3>
             </li>
             <li class="projects-list-item">
@@ -126,8 +140,13 @@
                 src="./Images/Portfolio/portfolio4.jpg"
                 alt=""
               />
+              <p class="projects-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
+                eligendi voluptatibus perspiciatis eum iusto facere error quasi
+                quia labore iste eius.
+              </p>
               <h2 class="projects-title">Проект Prime</h2>
-              <p class="projects-description"></p>
               <h3 class="projects-type">Маркетинг</h3>
             </li>
             <li class="projects-list-item">
@@ -136,8 +155,14 @@
                 src="./Images/Portfolio/portfolio5.jpg"
                 alt=""
               />
+              <p class="projects-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
+                eligendi voluptatibus perspiciatis eum iusto facere error quasi
+                quia labore iste eius.
+              </p>
               <h2 class="projects-title">Проект Boxes</h2>
-              <p class="projects-description"></p>
+
               <h3 class="projects-type">Приложение</h3>
             </li>
             <li class="projects-list-item">
@@ -146,8 +171,13 @@
                 src="./Images/Portfolio/portfolio6.jpg"
                 alt=""
               />
+              <p class="projects-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
+                eligendi voluptatibus perspiciatis eum iusto facere error quasi
+                quia labore iste eius.
+              </p>
               <h2 class="projects-title">Inspiration has no Borders</h2>
-              <p class="projects-description"></p>
               <h3 class="projects-type">Веб-сайт</h3>
             </li>
             <li class="projects-list-item">
@@ -156,8 +186,13 @@
                 src="./Images/Portfolio/portfolio7.jpg"
                 alt=""
               />
+              <p class="projects-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
+                eligendi voluptatibus perspiciatis eum iusto facere error quasi
+                quia labore iste eius.
+              </p>
               <h2 class="projects-title">Издание Limited Edition</h2>
-              <p class="projects-description"></p>
               <h3 class="projects-type">Дизайн</h3>
             </li>
             <li class="projects-list-item">
@@ -166,8 +201,13 @@
                 src="./Images/Portfolio/portfolio8.jpg"
                 alt=""
               />
+              <p class="projects-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
+                eligendi voluptatibus perspiciatis eum iusto facere error quasi
+                quia labore iste eius.
+              </p>
               <h2 class="projects-title">Проект LAB</h2>
-              <p class="projects-description"></p>
               <h3 class="projects-type">Маркетинг</h3>
             </li>
             <li class="projects-list-item">
@@ -176,8 +216,13 @@
                 src="./Images/Portfolio/portfolio9.jpg"
                 alt=""
               />
+              <p class="projects-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
+                eligendi voluptatibus perspiciatis eum iusto facere error quasi
+                quia labore iste eius.
+              </p>
               <h2 class="projects-title">Growing Business</h2>
-              <p class="projects-description"></p>
               <h3 class="projects-type">Приложение</h3>
             </li>
           </ul>
