--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
           >
           <ul class="navigation-menu list">
             <li class="navigation-menu-item">
-              <a class="navigation-menu-link link" href="">Студия</a>
+              <a class="navigation-menu-link link current" href="">Студия</a>
             </li>
             <li class="navigation-menu-item">
-              <a class="navigation-menu-link link" href="portfolio.html"
+              <a class="navigation-menu-link link current" href="portfolio.html"
                 >Портфолио</a
               >
             </li>
             <li class="navigation-menu-item">
-              <a class="navigation-menu-link link" href="">Контакты</a>
+              <a class="navigation-menu-link link current" href="">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -66,7 +66,9 @@
               Эффективные решения<br />
               для вашего бизнеса
             </h1>
-            <button class="hero-section-button">Заказать услугу</button>
+            <button class="hero-section-button">
+              <p class="hero-button-text">Заказать услугу</p>
+            </button>
           </div>
         </div>
       </section>
